lib/src/compiler/tests/testdata/errors/132.out
error[E001]: syntax error
 --> line:3:10
  |
3 |     true "foo"
  |          ^^^^^ expecting operator or `}`, found `"foo"`
  |